Fix img display bug on iOS

--- a/static/css/catalogue.css
+++ b/static/css/catalogue.css
@@ -75,6 +75,9 @@ h1 {
     transition: transform 1s ease-out;
     height: auto;
     width: auto;
+    max-height: 100%;
+    max-width: 100%;
+    object-fit: contain;
 }
 
 a .card-top img:hover {
